get input value and create styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import 'components/buttons';
 
 //Core
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 @import 'core/variables';
 
 //Layout
