--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,2 +1,64 @@
-body {
-  background-color: red; }
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700");
+.form__btn {
+  display: flex;
+  flex-direction: column;
+  margin: 25px; }
+
+.form__btn--style {
+  width: 250px;
+  height: 30px;
+  margin: 10px;
+  background: #3a7999;
+  color: #f2f2f2;
+  font-weight: bold;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: width 2s; }
+  .form__btn--style:hover {
+    width: 300px;
+    background-color: #ccf151;
+    font-size: 19px; }
+
+* {
+  font-family: 'lato';
+  margin: 0;
+  padding: 0; }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 50px; }
+
+.form__date {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 25px; }
+  .form__date label {
+    padding-bottom: 5px; }
+  .form__date input {
+    padding-left: 7px;
+    width: 150px; }
+
+.form__state {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-bottom: 25px; }
+  .form__state .form__state--check {
+    display: flex;
+    flex-direction: row;
+    align-items: center; }
+    .form__state .form__state--check input, .form__state .form__state--check label {
+      margin-top: 10px;
+      margin-right: 15px; }
+
+.form__msg {
+  display: flex;
+  flex-direction: column; }
+  .form__msg label {
+    padding-bottom: 5px; }
+  .form__msg input {
+    padding-left: 7px;
+    width: 250px; }
