--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -1,3 +1,49 @@
-body {
-    background-color: red;
+* {
+  font-family: 'lato';
+  margin: 0;
+  padding: 0;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 50px;
+}
+.form__date {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 25px;
+  label {
+    padding-bottom: 5px;
+  }
+  input {
+    padding-left: 7px;
+    width: 150px;
+  }
+}
+.form__state {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-bottom: 25px;
+  .form__state--check {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    input,label {
+      margin-top: 10px;
+      margin-right: 15px;
+    }
+  }
+}
+.form__msg {
+  display: flex;
+  flex-direction: column;
+  label {
+    padding-bottom: 5px;
+  }
+  input {
+    padding-left: 7px;
+    width: 250px;
+  }
 }
