--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -4,7 +4,7 @@
   margin: 25px;
 }
 .form__btn--style {
-  width: 250px;
+  width: 220px;
   height: 30px;
   margin: 10px;
   background: #3a7999;
@@ -13,10 +13,23 @@
   border: none;
   border-radius: 7px;
   cursor: pointer;
-  transition: width 2s;
+  transition: width 1.5s;
   &:hover {
-    width: 300px;
+    width: 250px;
     background-color: #ccf151;
     font-size: 19px;
   }
+}
+.btn__plus{
+  position: relative;
+  left: 50%;
+  margin-top: 20px;
+  background: #ffee4d;
+  border: none;
+  width: 100px;
+  height: 50px;
+  border-radius: 5px;
+  color: #3e3f3f;
+  font-size: 40px;
+  text-decoration: none;
 }
