--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -5,7 +5,7 @@
   margin: 25px; }
 
 .form__btn--style {
-  width: 250px;
+  width: 220px;
   height: 30px;
   margin: 10px;
   background: #3a7999;
@@ -14,11 +14,45 @@
   border: none;
   border-radius: 7px;
   cursor: pointer;
-  transition: width 2s; }
+  transition: width 1.5s; }
   .form__btn--style:hover {
-    width: 300px;
+    width: 250px;
     background-color: #ccf151;
     font-size: 19px; }
+
+.btn__plus {
+  position: relative;
+  left: 50%;
+  margin-top: 20px;
+  background: #ffee4d;
+  border: none;
+  width: 100px;
+  height: 50px;
+  border-radius: 5px;
+  color: #3e3f3f;
+  font-size: 40px;
+  text-decoration: none; }
+
+.face__list {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin: 40px; }
+  .face__list li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 25px;
+    width: 100%;
+    list-style: none; }
+  .face__list img {
+    margin-right: 10px; }
+
+.header {
+  background-color: #3792dd;
+  color: #ffffff;
+  padding: 70px; }
+  .header span {
+    color: #e1ec60; }
 
 * {
   font-family: 'lato';
@@ -62,3 +96,14 @@
   .form__msg input {
     padding-left: 7px;
     width: 250px; }
+
+.visible {
+  display: flex;
+  flex-direction: column;
+  margin-top: 16px; }
+
+.hidden {
+  display: none; }
+
+.link {
+  text-decoration: none; }
