--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -47,3 +47,14 @@
     width: 250px;
   }
 }
+.visible {
+  display: flex;
+  flex-direction: column;
+  margin-top: 16px;
+}
+.hidden {
+  display: none;
+}
+.link {
+  text-decoration: none;
+}
